add static images inside game

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Rest in Pieces</title>
+		<title>Cut The rope like</title>
 		<meta name="description" content="little game of painting">
 		<meta name="author" content="Winckell Benjamin Sorin Mathieu">
 		<meta charset="UTF-8">
@@ -14,8 +14,8 @@
     </head>
 	<body onselectstart="return false">
 		<canvas id="canvas"></canvas>
-		<div id="containerTearsGUI"><span id = 'counterTears'></span> Tears<div class="tear"></div></div>
+<!-- 		<div id="containerTearsGUI"><span id = 'counterTears'></span> Tears<div class="tear"></div></div>
 		<div id="gameOver">YOU LOOSE RETRY WITH F5</div>
-		<div id="controles">A, W, S, D to move your character<br>Q to change the controlled member <br>E and R for primary and secondary actions<br>SPACE to jump</div>
+		<div id="controles">A, W, S, D to move your character<br>Q to change the controlled member <br>E and R for primary and secondary actions<br>SPACE to jump</div> -->
 	</body>
 </html>
