changing graphic sprites

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Cut The rope like</title>
+		<title>Candy Rope Saga</title>
 		<meta name="description" content="little game of painting">
 		<meta name="author" content="Winckell Benjamin Sorin Mathieu">
 		<meta charset="UTF-8">
@@ -20,14 +20,11 @@
         Your browser does not support the audio tag.
     </audio>
 		<canvas id="canvas" class="displayNone"></canvas>
-<!-- 		<div id="containerTearsGUI"><span id = 'counterTears'></span> Tears<div class="tear"></div></div>
-		<div id="gameOver">YOU LOOSE RETRY WITH F5</div>
-		<div id="controles">A, W, S, D to move your character<br>Q to change the controlled member <br>E and R for primary and secondary actions<br>SPACE to jump</div> -->
         <div id="notif" class=''>
             <div id="container">            
-                <p class="title fa fa-btc">itcut the Rope</p>
+                <p class="title fa ">Candy Rope Saga</p>
                 <p class="explication">Welcome to this little game made by 
-                <br><b> Benjamin Winckell</b><br></p>
+                <br><b> Benjamin Winckell</b><br><br> <b> Your Goal is to cut the rope with your left click and give the candy to the puppy </b></p>
                 <button id="start" class="buttonInit infinite animated pulse"><u><b>Start Game</b></u></button>
                 <button id="continue" class="buttonInit displayNone infinite animated pulse"><u><b>Next Level</b></u></button>
                 <button id="restart" class="buttonInit displayNone infinite animated pulse" style='color:black'><u><b>Restart Level</b></u></button>
